--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,2 +1,6 @@
-<mat-toolbar class="mat-elevation-z3"></mat-toolbar>
+<mat-toolbar class="mat-elevation-z3">
+  <button mat-icon-button>
+    <mat-icon>menu</mat-icon>
+  </button>
+</mat-toolbar>
 <router-outlet></router-outlet>
