--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -3,4 +3,8 @@
     <mat-icon>menu</mat-icon>
   </button>
 </mat-toolbar>
-<router-outlet></router-outlet>
+<mat-sidenav-container>
+  <mat-sidenav-content class="content">
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
