--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -4,6 +4,9 @@
   </button>
 </mat-toolbar>
 <mat-sidenav-container>
+  <mat-sidenav opened mode="side" [style.width]="'250px'">
+    <app-custom-sidenav></app-custom-sidenav>
+  </mat-sidenav>
   <mat-sidenav-content class="content">
     <router-outlet></router-outlet>
   </mat-sidenav-content>
