--- a/frontend/src/app/components/custom-sidenav/custom-sidenav.html
+++ b/frontend/src/app/components/custom-sidenav/custom-sidenav.html
@@ -1,3 +1,7 @@
 <div class="sidenav-header">
-    <img src="/assets/user.webp" alt="" />
+  <img src="/assets/user.webp" alt="" />
+  <div class="header-text">
+    <h2>Your channel</h2>
+    <p>Channel 1</p>
+  </div>
 </div>
