--- a/frontend/src/app/components/custom-sidenav/custom-sidenav.html
+++ b/frontend/src/app/components/custom-sidenav/custom-sidenav.html
@@ -1,5 +1,5 @@
 <div class="sidenav-header">
-  <img src="/assets/user.webp" alt="" />
+  <img [width]="profilePicSize()" [height]="profilePicSize()" src="/assets/user.webp" alt="" />
   <div class="header-text">
     <h2>Your channel</h2>
     <p>Channel 1</p>
