--- a/frontend/src/app/components/custom-sidenav/custom-sidenav.html
+++ b/frontend/src/app/components/custom-sidenav/custom-sidenav.html
@@ -1,6 +1,6 @@
 <div class="sidenav-header">
   <img [width]="profilePicSize()" [height]="profilePicSize()" src="/assets/user.webp" alt="" />
-  <div class="header-text">
+  <div class="header-text" [class.hide-header-text]="sideNavCollapsed()">
     <h2>Your channel</h2>
     <p>Channel 1</p>
   </div>
