--- a/frontend/src/app/components/custom-sidenav/custom-sidenav.html
+++ b/frontend/src/app/components/custom-sidenav/custom-sidenav.html
@@ -9,6 +9,6 @@
 <mat-nav-list>
   <a mat-list-item *ngFor="let item of menuItems" [routerLink]="item.route">
     <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
-    <span matListItemTitle>{{ item.label }}</span>
+    <span matListItemTitle *ngIf="!sideNavCollapsed()">{{ item.label }}</span>
   </a>
 </mat-nav-list>
