--- a/frontend/src/app/app.scss
+++ b/frontend/src/app/app.scss
@@ -5,6 +5,10 @@ mat-toolbar {
 
 mat-sidenav-container {
   height: calc(100vh - 64px);
+
+  mat-sidenav, mat-sidenav-content {
+    transition: all 500ms ease-in-out;
+  }
   
   .content {
     padding: 24px;
