--- a/frontend/src/app/components/custom-sidenav/custom-sidenav.html
+++ b/frontend/src/app/components/custom-sidenav/custom-sidenav.html
@@ -1,14 +1,27 @@
 <div class="sidenav-header">
-  <img [width]="profilePicSize()" [height]="profilePicSize()" src="/assets/user.webp" alt="" />
+  <img
+    [width]="profilePicSize()"
+    [height]="profilePicSize()"
+    src="/assets/user.webp"
+    alt=""
+  />
   <div class="header-text" [class.hide-header-text]="sideNavCollapsed()">
     <h2>Your channel</h2>
     <p>Channel 1</p>
   </div>
 </div>
 <mat-nav-list>
-<mat-nav-list>
-  <a mat-list-item *ngFor="let item of menuItems" [routerLink]="item.route">
-    <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
-    <span matListItemTitle *ngIf="!sideNavCollapsed()">{{ item.label }}</span>
-  </a>
+  <mat-nav-list>
+    <a
+      mat-list-item
+      *ngFor="let item of menuItems"
+      [routerLink]="item.route"
+      routerLinkActive="selected-menu-item"
+      #rla="routerLinkActive"
+      [activated]="rla.isActive"
+    >
+      <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
+      <span matListItemTitle *ngIf="!sideNavCollapsed()">{{ item.label }}</span>
+    </a>
+  </mat-nav-list>
 </mat-nav-list>
