--- a/frontend/src/app/components/custom-sidenav/custom-sidenav.html
+++ b/frontend/src/app/components/custom-sidenav/custom-sidenav.html
@@ -20,7 +20,7 @@
       #rla="routerLinkActive"
       [activated]="rla.isActive"
     >
-      <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
+      <mat-icon [fontSet]="rla.isActive ? 'material-icons' : 'material-icons-outlined'" matListItemIcon>{{ item.icon }}</mat-icon>
       <span matListItemTitle *ngIf="!sideNavCollapsed()">{{ item.label }}</span>
     </a>
   </mat-nav-list>
