--- a/frontend/src/app/app.scss
+++ b/frontend/src/app/app.scss
@@ -1,16 +1,7 @@
-mat-toolbar {
-  position: relative;
-  z-index: 5;
-}
-
 mat-sidenav-container {
-  height: calc(100vh - 64px);
-
-  mat-sidenav, mat-sidenav-content {
+  height: 100vh;
+  mat-sidenav,
+  mat-sidenav-content {
     transition: all 500ms ease-in-out;
-  }
-  
-  .content {
-    padding: 24px;
   }
 }
