--- a/frontend/src/app/app.scss
+++ b/frontend/src/app/app.scss
@@ -1,7 +1,14 @@
 mat-sidenav-container {
   height: 100vh;
+
   mat-sidenav,
   mat-sidenav-content {
     transition: all 500ms ease-in-out;
+  }
+
+  mat-sidenav-content {
+    .pages__container {
+      padding: 15px 8px;
+    }
   }
 }
