--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,4 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
+@use "./styles/themes/light-theme";
+@use "./styles/themes/dark-theme";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+
+  &.light-theme {
+    // Definieren Sie hier alle zusätzlichen Light-Mode-spezifischen Stile
+    background-color: #f5f5f5;
+    color: #333;
+  }
+
+  &.dark-theme {
+    // Definieren Sie hier alle zusätzlichen Dark-Mode-spezifischen Stile
+    background-color: #303030;
+    color: #e0e0e0;
+  }
+}
