--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -9,15 +9,11 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 
-  &.light-theme {
-    // Definieren Sie hier alle zusätzlichen Light-Mode-spezifischen Stile
-    background-color: #f5f5f5;
-    color: #333;
-  }
+  // &.light-theme {
 
-  &.dark-theme {
-    // Definieren Sie hier alle zusätzlichen Dark-Mode-spezifischen Stile
-    background-color: #303030;
-    color: #e0e0e0;
-  }
+  // }
+
+  // &.dark-theme {
+
+  // }
 }
