--- a/zoaib/src/app/components/custom-sidenav/custom-sidenav.scss
+++ b/zoaib/src/app/components/custom-sidenav/custom-sidenav.scss
@@ -31,14 +31,18 @@
     height: 0px !important;
   }
 
-  .menu-item {
-    border-left: 5px solid;
-    border-left-color: rgba(0, 0, 0, 0);
-  }
+  // .menu-item {
+  //   border-left: 5px solid;
+  //   border-left-color: rgba(0, 0, 0, 0);
+  // }
 
-  .selected-menu-item {
-    border-left: 5px solid;
-    border-left-color: blue;
-    background: rgba(0, 0, 0, 0.05);
-  }
+  // .selected-menu-item {
+  //   border-left-color: var(--primary-color);
+  //   background: rgba(0, 0, 0, 0.05);
+  // }
+}
+
+.selected-menu-item {
+  border-left: 5px solid;
+  border-left-color: red !important;
 }
