--- a/zoaib/src/app/components/custom-sidenav/custom-sidenav.scss
+++ b/zoaib/src/app/components/custom-sidenav/custom-sidenav.scss
@@ -30,23 +30,12 @@
     opacity: 0;
     height: 0px !important;
   }
-
-  // .menu-item {
-  //   border-left: 5px solid;
-  //   border-left-color: rgba(0, 0, 0, 0);
-  // }
-
-  // .selected-menu-item {
-  //   border-left-color: var(--primary-color);
-  //   background: rgba(0, 0, 0, 0.05);
-  // }
 }
 
 .menu-item {
-  border-left: 5px solid;
-  border-left-color: rgba(0, 0, 0, 0);
+  border-left: 5px solid rgba(0, 0, 0, 0);
 }
 
 .selected-menu-item {
-  border-left-color: red;
+  border-left-color: var(--primary-color);
 }
