--- a/zoaib/src/app/pages/dashboard/dashboard.html
+++ b/zoaib/src/app/pages/dashboard/dashboard.html
@@ -1,4 +1,10 @@
-<h2>Channel Dashboard</h2>
+<div class="header">
+  <h2>Channel Dashboard</h2>
+  <button mat-raised-button>
+    <mat-icon>add_circle</mat-icon>
+    Add widget
+  </button>
+</div>
 <div class="dashboard-widgets">
   @for (w of store.widgets(); track w.id) {
   <app-widget-component [data]="w"></app-widget-component>
