--- a/zoaib/src/styles.scss
+++ b/zoaib/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
-@use "@angular/material" as mat;
-@include mat.core();
+// @use "@angular/material" as mat;
+// @include mat.core();
 
 html,
 body {
@@ -10,46 +10,46 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  --primary-color: #cc0000;
+  // --primary-color: #cc0000;
 }
 
-$m2-mat-primary: (
-  main: #cc0000,
-  lighter: #f0b3b3,
-  darker: #900000,
-  200: #cc0000,
-  // For slide toggle,
-  contrast:
-    (
-      main: #ffffff,
-      lighter: #000000,
-      darker: #ffffff,
-    ),
-);
-
-$theme-primary: mat.m2-define-palette($m2-mat-primary, main, lighter, darker);
-$theme-accent: mat.m2-define-palette(mat.$m2-indigo-palette, A200, A100, A400);
-
-// $my-theme: mat-define-light-theme (
+// $m2-mat-primary: (
+//   main: #cc0000,
+//   lighter: #f0b3b3,
+//   darker: #900000,
+//   200: #cc0000,
+//   // For slide toggle,
+//   contrast:
 //     (
-//         color: (
-//             primary: $theme-primary,
-//             accent: $theme-accent,
-//         ),
-//         typography: mat-define-typography-config(),
-//         density: 0,
-//     )
+//       main: #ffffff,
+//       lighter: #000000,
+//       darker: #ffffff,
+//     ),
 // );
 
-$my-theme: mat.m2-define-light-theme(
-  (
-    color: (
-      primary: $theme-primary,
-      accent: $theme-accent,
-    ),
-    typography: mat.m2-define-typography-config(),
-    density: 0,
-  )
-);
+// $theme-primary: mat.m2-define-palette($m2-mat-primary, main, lighter, darker);
+// $theme-accent: mat.m2-define-palette(mat.$m2-indigo-palette, A200, A100, A400);
 
-@include mat.all-component-themes($my-theme);
+// // $my-theme: mat-define-light-theme (
+// //     (
+// //         color: (
+// //             primary: $theme-primary,
+// //             accent: $theme-accent,
+// //         ),
+// //         typography: mat-define-typography-config(),
+// //         density: 0,
+// //     )
+// // );
+
+// $my-theme: mat.m2-define-light-theme(
+//   (
+//     color: (
+//       primary: $theme-primary,
+//       accent: $theme-accent,
+//     ),
+//     typography: mat.m2-define-typography-config(),
+//     density: 0,
+//   )
+// );
+
+// @include mat.all-component-themes($my-theme);
