--- a/zoaib/src/app/pages/dashboard/dashboard.html
+++ b/zoaib/src/app/pages/dashboard/dashboard.html
@@ -1,6 +1,6 @@
 <div class="header">
   <h2>Channel Dashboard</h2>
-  <button mat-raised-button>
+  <button mat-raised-button color="primary">
     <mat-icon>add_circle</mat-icon>
     Add widget
   </button>
