--- a/zoaib/src/styles.scss
+++ b/zoaib/src/styles.scss
@@ -3,21 +3,21 @@
 // @use "@angular/material" as mat;
 // @include mat.core();
 
-@use '@angular/material' as mat;
+// @use '@angular/material' as mat;
 
-@include mat.core();
+// @include mat.core();
 
-$my-primary: mat.m2-define-palette(mat.$m2-indigo-palette, 500);
-$my-accent: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
+// $my-primary: mat.m2-define-palette(mat.$m2-indigo-palette, 500);
+// $my-accent: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
 
-$my-theme: mat.m2-define-light-theme((
-  color: (
-    primary: $my-primary,
-    accent: $my-accent,
-  )
-));
+// $my-theme: mat.m2-define-light-theme((
+//   color: (
+//     primary: $my-primary,
+//     accent: $my-accent,
+//   )
+// ));
 
-@include mat.all-component-themes($my-theme);
+// @include mat.all-component-themes($my-theme);
 
 html,
 body {
