--- a/zoaib/src/app/pages/dashboard/dashboard.html
+++ b/zoaib/src/app/pages/dashboard/dashboard.html
@@ -1,12 +1,17 @@
 <div class="header">
   <h2>Channel Dashboard</h2>
-  <button mat-raised-button color="primary">
+  <button mat-raised-button color="primary" [mat-menu-trigger-for]="widgetMenu">
     <mat-icon>add_circle</mat-icon>
     Add widget
   </button>
+  <mat-menu #widgetMenu="matMenu">
+    @for (widget of store.widgetsToAdd(); track widget.id) {
+    <button mat-menu-item> {{widget.label }}</button>
+    }
+  </mat-menu>
 </div>
 <div class="dashboard-widgets">
-  @for (w of store.widgets(); track w.id) {
+  @for (w of store.addedWidgets(); track w.id) {
   <app-widget-component [data]="w"></app-widget-component>
   }
 </div>
