--- a/zoaib/src/app/pages/dashboard/dashboard.html
+++ b/zoaib/src/app/pages/dashboard/dashboard.html
@@ -6,7 +6,11 @@
   </button>
   <mat-menu #widgetMenu="matMenu">
     @for (widget of store.widgetsToAdd(); track widget.id) {
-    <button mat-menu-item> {{widget.label }}</button>
+    <button mat-menu-item (click)="store.addWidget(widget)">
+      {{ widget.label }}
+    </button>
+    } @empty {
+    <button mat-menu-item>No widgets to add</button>
     }
   </mat-menu>
 </div>
