--- a/zoaib/src/app/components/widget-component/widget-options/widget-options.html
+++ b/zoaib/src/app/components/widget-component/widget-options/widget-options.html
@@ -1,1 +1,1 @@
-<p>widget-options works!</p>
+<button mat-icon-button class="close-button" (click)="showOptions.set(false)"><mat-icon>close</mat-icon></button>
