--- a/zoaib/src/app/components/widget-component/widget-options/widget-options.scss
+++ b/zoaib/src/app/components/widget-component/widget-options/widget-options.scss
@@ -14,4 +14,17 @@
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
+
+    > {
+        display: flex;
+        gap: 8px;
+        align-items: center;
+        margin-bottom: 8px;
+    }
+
+    .close-button {
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
 }
