--- a/zoaib/src/app/components/widget-component/widget-component.html
+++ b/zoaib/src/app/components/widget-component/widget-component.html
@@ -6,6 +6,6 @@
   <ng-container [ngComponentOutlet]="data().content" />
 
   @if (showOptions()) {
-    <app-widget-options />
+    <app-widget-options [(showOptions)]="showOptions" />
   }
 </div>
