--- a/zoaib/src/app/components/widget-component/widget-options/widget-options.scss
+++ b/zoaib/src/app/components/widget-component/widget-options/widget-options.scss
@@ -14,6 +14,7 @@
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
+    --mat-button-toggle-height: 16px;
 
     > {
         display: flex;
