--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,19 +1,1 @@
-@use "./styles/themes/light-theme";
-@use "./styles/themes/dark-theme";
-
-html,
-body {
-  height: 100%;
-}
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-
-  // &.light-theme {
-
-  // }
-
-  // &.dark-theme {
-
-  // }
-}
+/* You can add global styles to this file, and also import other style files */
