--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,3 +1,4 @@
 <mat-sidenav-container>
-  <mat-toolbar>AdminLTE 3</mat-toolbar>
+  <mat-toolbar><img src="favicon.webp" alt="Logo">Dashboard</mat-toolbar>
+  <img src="assets/user.webp" alt="User Image">
 </mat-sidenav-container>
