--- a/zoaib/src/styles.scss
+++ b/zoaib/src/styles.scss
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
+@use "@angular/material" as mat;
+
 html,
 body {
   height: 100%;
@@ -40,3 +42,13 @@ h3 {
 .text-green {
   color: #03c03c;
 }
+
+$custom-theme: mat.define-theme(
+  (
+    color: (
+      theme-type: light,
+      primary: mat.$azure-palette,
+      use-system-variables: true,
+    ),
+  )
+);
