--- a/zoaib/src/styles.scss
+++ b/zoaib/src/styles.scss
@@ -54,53 +54,53 @@ $custom-theme: mat.define-theme(
 );
 
 html {
-  --md-sys-color-primary: rgb(54 94 157);
-  --md-sys-color-surface-tint: rgb(54 94 157);
-  --md-sys-color-on-primary: rgb(255 255 255);
-  --md-sys-color-primary-container: rgb(118 156 223);
-  --md-sys-color-on-primary-container: rgb(0 50 106);
-  --md-sys-color-secondary: rgb(81 95 121);
-  --md-sys-color-on-secondary: rgb(255 255 255);
-  --md-sys-color-secondary-container: rgb(210 224 255);
-  --md-sys-color-on-secondary-container: rgb(85 99 125);
-  --md-sys-color-tertiary: rgb(129 74 135);
-  --md-sys-color-on-tertiary: rgb(255 255 255);
-  --md-sys-color-tertiary-container: rgb(196 134 200);
-  --md-sys-color-on-tertiary-container: rgb(81 29 88);
-  --md-sys-color-error: rgb(186 26 26);
-  --md-sys-color-on-error: rgb(255 255 255);
-  --md-sys-color-error-container: rgb(255 218 214);
-  --md-sys-color-on-error-container: rgb(147 0 10);
-  --md-sys-color-background: rgb(249 249 255);
-  --md-sys-color-on-background: rgb(26 28 32);
-  --md-sys-color-surface: rgb(249 249 255);
-  --md-sys-color-on-surface: rgb(26 28 32);
-  --md-sys-color-surface-variant: rgb(223 226 238);
-  --md-sys-color-on-surface-variant: rgb(67 71 80);
-  --md-sys-color-outline: rgb(115 119 129);
-  --md-sys-color-outline-variant: rgb(195 198 210);
-  --md-sys-color-shadow: rgb(0 0 0);
-  --md-sys-color-scrim: rgb(0 0 0);
-  --md-sys-color-inverse-surface: rgb(47 48 53);
-  --md-sys-color-inverse-on-surface: rgb(241 240 246);
-  --md-sys-color-inverse-primary: rgb(170 199 255);
-  --md-sys-color-primary-fixed: rgb(214 227 255);
-  --md-sys-color-on-primary-fixed: rgb(0 27 62);
-  --md-sys-color-primary-fixed-dim: rgb(170 199 255);
-  --md-sys-color-on-primary-fixed-variant: rgb(25 70 131);
-  --md-sys-color-secondary-fixed: rgb(214 227 255);
-  --md-sys-color-on-secondary-fixed: rgb(13 28 50);
-  --md-sys-color-secondary-fixed-dim: rgb(185 199 229);
-  --md-sys-color-on-secondary-fixed-variant: rgb(58 71 96);
-  --md-sys-color-tertiary-fixed: rgb(255 214 254);
-  --md-sys-color-on-tertiary-fixed: rgb(53 1 62);
-  --md-sys-color-tertiary-fixed-dim: rgb(242 176 245);
-  --md-sys-color-on-tertiary-fixed-variant: rgb(103 50 109);
-  --md-sys-color-surface-dim: rgb(218 217 223);
-  --md-sys-color-surface-bright: rgb(249 249 255);
-  --md-sys-color-surface-container-lowest: rgb(255 255 255);
-  --md-sys-color-surface-container-low: rgb(243 243 249);
-  --md-sys-color-surface-container: rgb(238 237 243);
-  --md-sys-color-surface-container-high: rgb(232 231 237);
-  --md-sys-color-surface-container-highest: rgb(226 226 232);
+  --sys-primary: rgb(54 94 157);
+  --sys-surface-tint: rgb(54 94 157);
+  --sys-on-primary: rgb(255 255 255);
+  --sys-primary-container: rgb(118 156 223);
+  --sys-on-primary-container: rgb(0 50 106);
+  --sys-secondary: rgb(81 95 121);
+  --sys-on-secondary: rgb(255 255 255);
+  --sys-secondary-container: rgb(210 224 255);
+  --sys-on-secondary-container: rgb(85 99 125);
+  --sys-tertiary: rgb(129 74 135);
+  --sys-on-tertiary: rgb(255 255 255);
+  --sys-tertiary-container: rgb(196 134 200);
+  --sys-on-tertiary-container: rgb(81 29 88);
+  --sys-error: rgb(186 26 26);
+  --sys-on-error: rgb(255 255 255);
+  --sys-error-container: rgb(255 218 214);
+  --sys-on-error-container: rgb(147 0 10);
+  --sys-background: rgb(249 249 255);
+  --sys-on-background: rgb(26 28 32);
+  --sys-surface: rgb(249 249 255);
+  --sys-on-surface: rgb(26 28 32);
+  --sys-surface-variant: rgb(223 226 238);
+  --sys-on-surface-variant: rgb(67 71 80);
+  --sys-outline: rgb(115 119 129);
+  --sys-outline-variant: rgb(195 198 210);
+  --sys-shadow: rgb(0 0 0);
+  --sys-scrim: rgb(0 0 0);
+  --sys-inverse-surface: rgb(47 48 53);
+  --sys-inverse-on-surface: rgb(241 240 246);
+  --sys-inverse-primary: rgb(170 199 255);
+  --sys-primary-fixed: rgb(214 227 255);
+  --sys-on-primary-fixed: rgb(0 27 62);
+  --sys-primary-fixed-dim: rgb(170 199 255);
+  --sys-on-primary-fixed-variant: rgb(25 70 131);
+  --sys-secondary-fixed: rgb(214 227 255);
+  --sys-on-secondary-fixed: rgb(13 28 50);
+  --sys-secondary-fixed-dim: rgb(185 199 229);
+  --sys-on-secondary-fixed-variant: rgb(58 71 96);
+  --sys-tertiary-fixed: rgb(255 214 254);
+  --sys-on-tertiary-fixed: rgb(53 1 62);
+  --sys-tertiary-fixed-dim: rgb(242 176 245);
+  --sys-on-tertiary-fixed-variant: rgb(103 50 109);
+  --sys-surface-dim: rgb(218 217 223);
+  --sys-surface-bright: rgb(249 249 255);
+  --sys-surface-container-lowest: rgb(255 255 255);
+  --sys-surface-container-low: rgb(243 243 249);
+  --sys-surface-container: rgb(238 237 243);
+  --sys-surface-container-high: rgb(232 231 237);
+  --sys-surface-container-highest: rgb(226 226 232);
 }
